Generate INVALID_OPERATION when depth/stencil textures are specified using targets other than TEXTURE_2D in ES2/WebGL1.

Also, Roll in related WebGL conformance test to have test coverage:
https://chromium.googlesource.com/external/khronosgroup/webgl.git/+/73b300f24942adf7013de30ccdc6a2cc88105e72

BUG=718846
TEST=webgl_conformance
R=piman@chromium.org
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2865233002
Cr-Commit-Position: refs/heads/master@{#470386}

Former-commit-id: d5523a250fa3faed2930cabcc13ac0746c1cfb2f